<resources>
    <string name="app_name">B18 Calculator</string>
    <string name="welcome">¡Hola!</string>
    <string name="app_description">Bienvenido a la aplicación de B18 Calculator, encuentra herramientas que te ayuden en tu postulación.</string>
    <string name="preselection_title">Calculadora de preselección</string>
    <string name="preselection_description">Simula tu puntaje de preselección para beca 18</string>
    <string name="selection_title">Calculadora de selección</string>
    <string name="selection_description">Simula tu puntaje de selección para beca 18</string>
    <string name="credits_title">Créditos</string>
    <string name="credits_description">Conoce y apoya al creador del app</string>
    <string name="icon_preselection">Icono de preselección</string>
    <string name="icon_selection">Icono de selección</string>
    <string name="icon_credits">Icono de créditos</string>
    <string name="icon_pao">Icono de PAO</string>
    <string name="icon_tutorial">Icono de tutorial</string>
    <string name="credits_intro">B18 Calculator: Herramienta creada por Juffyto Segovia para ayudar a los postulantes de Beca 18.</string>
    <string name="junior_name">Junior Segovia Chalco</string>
    <string name="junior_description">Ganador de BECA 18 y estudiante de ingeniería de sistemas empresariales de la Universidad Científica del Sur.</string>
    <string name="calculadora_preseleccion_title">Calculadora de Preselección</string>
    <string name="calculadora_preseleccion_description">Utiliza nuestra herramienta para calcular y simular tu puntaje de preselección en Beca 18.</string>
    <string name="nombre_hint">Tu nombre</string>
    <string name="modalidad_hint">Modalidad de postulación</string>
    <string name="enp_hint">Puntaje del Examen Nacional de Preselección (0–120)</string>
    <string name="continuar">Continuar</string>
    <string name="limpiar">Limpiar formulario</string>
    <string name="calcular">Calcular Puntaje</string>
    <string name="reiniciar">Reiniciar Calculadora</string>
    <string name="sisfoh_hint">Clasificación SISFOH</string>
    <string name="departamento_hint">Departamento donde culmino la secundaria</string>
    <string name="info_quintil_description">Información sobre quintiles</string>
    <string name="quintil_info">
        \n
        ✅Quintil 1 (10 puntos): Amazonas, Ucayali, Ayacucho, Puno, Loreto\n
        \n
        ✅Quintil 2 (7 puntos): San Martín, Cusco, Huánuco, Apurímac, Huancavelica\n
        \n
        ✅Quintil 3 (5 puntos): Áncash, Tacna, Madre de Dios, Moquegua, Pasco, Cajamarca\n
        \n
        ✅Quintil 4 (2 puntos): Arequipa, Piura, Junín, Tumbes\n
        \n
        ✅Quintil 5 (0 puntos): Ica, Lambayeque, Lima, La Libertad</string>
    <string name="lengua_originaria_info">
    ✅Lenguas de primera prioridad:
    ASHANINKA, ASHENINKA, AWAJUN, CASHINAHUA, ESE EJA, KAKATAIBO, KICHWA, KUKAMA KUKAMIRIA, MATSIGENKA, NOMATSIGENGA, RESIGARO, SHARANAHUA, SHAWI, SHIPIBO-KONIBO, SHIWILU, WAMPIS, YANESHA, YINE\n
    \n
    ✅Lenguas de segunda prioridad:
    AIMARA, QUECHUA ANCASH, QUECHUA CAJAMARCA, QUECHUA CAJATAMBO, OYÓN, HUAURA, QUECHUA CHANKA, QUECHUA COLLAO, QUECHUA HUANUCO, QUECHUA INKAWASI CAÑARIS, QUECHUA PASCO, QUECHUA PATAZ, QUECHUA WANKA, QUECHUA YAUYAS
    </string>
    <string name="calculadora_seleccion_title">Calculadora de Selección</string>
    <string name="puntaje_preseleccion_hint">Puntaje de Preselección</string>
    <string name="calculadora_de_selecci_n">Calculadora de Selección</string>
    <string name="nombre">Nombre</string>
    <string name="modalidad">Modalidad</string>
    <string name="puntaje_de_preselecci_n">Puntaje de Preselección</string>
    <string name="regi_n_ies">Región IES</string>
    <string name="tipo_de_ies">Tipo de IES</string>
    <string name="gesti_n_de_la_ies">Gestión de la IES</string>
    <string name="seleccione_una_ies">Seleccione una IES</string>
    <string name="ies_instituciones_de_educaci_n_superior">IES (Instituciones de Educación Superior)</string>
    <string name="calcular_puntaje">Calcular Puntaje</string>
    <string name="limpiar_formulario">Limpiar Formulario</string>
    <string name="reporte_de_selecci_n">Reporte de Selección</string>
    <string name="tu_puntaje_de_selecci_n_es_0_puntos">Tu puntaje de selección es: 0 puntos</string>
    <string name="desglose_del_puntaje">Desglose del puntaje:</string>
    <string name="reiniciar_calculadora">Reiniciar Calculadora</string>
    <string name="volver_al_formulario">Volver al Formulario</string>
    <string name="actividades_extracurriculares">Participación en Actividades Extracurriculares - Máximo 10 puntos:</string>
    <string name="ce_concurso_escolar_nacional">(CE) Concurso Escolar Nacional (1°, 2º o 3º Puesto Etapa Nacional) o Concurso Escolar Internacional - 5 puntos</string>
    <string name="cep_participacion_en_ce">(CEP) Participación en la Etapa Nacional de los Concursos Escolares Nacionales - 2 puntos</string>
    <string name="jd_juegos_deportivos_escolares">(JD) Juegos Deportivos Escolares (1°, 2º o 3° puesto en Etapa Nacional) - 5 puntos</string>
    <string name="jdp_participacion_en_jd">(JDP) Participación en la Etapa Nacional de los Juegos Deportivos Escolares Nacionales - 2 puntos</string>
    <string name="otras_condiciones_priorizables">Otras condiciones priorizables - Máximo 25 puntos:</string>
    <string name="d_discapacidad">(D) Discapacidad - 5 puntos</string>
    <string name="b_bomberos">(B) Bomberos activos e hijos de bomberos - 5 puntos</string>
    <string name="v_voluntarios">(V) Voluntarios reconocidos por el MIMP - 5 puntos</string>
    <string name="ia_pertenencia_a_cna_pa_cc">(IA) Pertenencia a Comunidad Nativa Amazónica o Población Afroperuana – 5 puntos</string>
    <string name="pem_poblacion_expuesta">(PEM) Población expuesta a metales pesados y otras sustancias químicas – 5 puntos</string>
    <string name="pd_poblacion_beneficiaria">(PD) Población beneficiaria (Res. Suprema Nº 264–2022–JUS) – 5 puntos</string>
    <string name="or_orfandad">(OR) Población beneficiaria de la Ley N° 31405 (orfandad) – 5 puntos</string>
    <string name="df_desproteccion_familiar">(DF) Desprotección familiar - 5 puntos</string>
    <string name="acs_agente_comunitario">(ACS) Agente Comunitario de Salud – 5 puntos</string>
    <string name="priorizacion_de_lo">Priorización de lengua originaria</string>
    <string name="info_sobre_lo">Información sobre lenguas originarias</string>
    <string name="acceder_a_simulacros_pdf">📚 Acceder a Simulacros PDF</string>
    <string name="practicar_simulacro_en_linea">⏱️ Practicar Simulacro en Línea</string>
    <string name="redessociales">Sígueme en mis redes sociales</string>
    <string name="grupos">Únete a la comunidad de becarios</string>
    <string name="asesoria">Asesoría personalizada</string>
    <string name="donaciones">Donaciones</string>
    <string name="pao">Plataforma de apoyo y orientación</string>
    <string name="descripcion_pao">Ingresa a PAO para prepararte, conocer sobre las IES y practicar</string>
    <string name="tutorial_para_usar_la_app">Tutorial para usar la app</string>
    <string name="descripcion_tutorial">Aprende a utilizar la aplicación B18 Calculator</string>
    <string name="logo_de_beca_18">Logo de Beca 18</string>
    <string name="postula_a_beca_18_2025">Postula a Beca 18 2025</string>
    <string name="cel">939824399</string>

    <string name="icon_linkedin">Icono de LinkedIn</string>
    <string name="icon_facebook">Icono de Facebook</string>
    <string name="icon_instagram">Icono de Instagram</string>
    <string name="icon_youtube">Icono de YouTube</string>
    <string name="icon_website">Icono de Sitio Web</string>
    <string name="icon_tiktok">Icono de Tiktok</string>

    <string name="icon_discord">Icono de Discord</string>
    <string name="icon_whatsapp">Icono de WhatsApp</string>
    <string name="icon_telegram">Icono de Telegram</string>

    <string name="icon_asesoria">Icono de Juffyto</string>

    <string name="icon_yape">Icono de Yape</string>
    <string name="icon_plin">Icono de Plin</string>
    <string name="icon_copy">Icono de Copy</string>

</resources>